Начал базовую стилизацю

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,1 +1,24 @@
-// Начните писать стили здесь
+// БЭМ блоки
+@import "advantages.scss";
+@import "btn-burger.scss";
+@import "button.scss";
+@import "catalog.scss";
+@import "dev.scss";
+@import "footer.scss";
+@import "form.scss";
+@import "logo.scss";
+@import "main-nav.scss";
+@import "main.scss";
+@import "map.scss";
+@import "page-header.scss";
+@import "page.scss";
+@import "product.scss";
+@import "program.scss";
+@import "promo.scss";
+@import "sample.scss";
+@import "slider.scss";
+@import "social.scss";
+
+// Шрифты
+
+@import "fonts.scss";
