Заканчивает базоваю стилизацию главной страницы

--- a/source/sass/blocks/index/program.scss
+++ b/source/sass/blocks/index/program.scss
@@ -10,6 +10,7 @@
   font-weight: 400;
   font-size: 24px;
   line-height: 37px;
+  text-transform: uppercase;
 }
 
 .program__text {
@@ -22,4 +23,5 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 16px;
+  text-transform: uppercase;
 }
