--- a/source/sass/blocks/index/promo.scss
+++ b/source/sass/blocks/index/promo.scss
@@ -3,7 +3,6 @@
   background-image: $gradient, url("../../../img/index-background-desktop.png");
   background-size: 100%;
   background-repeat: no-repeat;
-  background-color: rgba(104, 183, 56, 0.85);
 }
 
 .promo__title {
@@ -18,4 +17,5 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 14px;
+  text-transform: uppercase;
 }
