--- a/source/sass/blocks/common/footer.scss
+++ b/source/sass/blocks/common/footer.scss
@@ -1,3 +1,16 @@
 .footer {
   background-color: $basic-grey;
 }
+
+.footer__address-title {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: uppercase;
+}
+
+.footer__address-text {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+}
