--- a/source/sass/blocks/index/sample.scss
+++ b/source/sass/blocks/index/sample.scss
@@ -9,11 +9,11 @@
 }
 
 .sample__text {
-  @include text;
+  @include common-text;
 }
 
 .sample__description {
-  @include text;
+  @include common-text;
   font-weight: 400;
   font-size: 12px;
   line-height: 12px;
