--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -26,3 +26,8 @@
 @import "./blocks/index/program.scss";
 @import "./blocks/index/sample.scss";
 @import "./blocks/index/advantages.scss";
+
+//Блоки страницы каталога
+
+@import "./blocks/catalog/catalog.scss";
+@import "./blocks/catalog/other-action.scss";
