--- a/source/sass/vareables.scss
+++ b/source/sass/vareables.scss
@@ -6,4 +6,5 @@ $base-black: #000000;
 $basic-grey: #f2f2f2;
 $sample-gray: #eaeaea;
 $dark-gray: #444444;
-$gradient: linear-gradient(to top, $base-white 178px, rgba(105, 183, 56, 0.85) 178px);
+
+//$gradient: linear-gradient(to top, $base-white 178px, rgba(105, 183, 56, 0.85) 178px);
