--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -14,9 +14,37 @@
   text-decoration: none;
 }
 
-@mixin text {
+//Параметры заголовков h1
+
+@mixin common-title {
+  font-family: "Oswald", sans-serif;
+  font-weight: 400;
+  font-size: 36px;
+  line-height: 36px;
+}
+
+//Параметры основгого текста на страницах
+
+@mixin common-text {
   font-family: "Lato", sans-serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
+}
+
+//Параметры заголовков в карточке товаров
+
+@mixin product-title {
+  font-family: "Oswald", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+@mixin product-info {
+  color: $dark-gray;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 16px;
 }
