Добавляет базовую стилизацию в форму

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -31,3 +31,7 @@
 
 @import "./blocks/catalog/catalog.scss";
 @import "./blocks/catalog/other-action.scss";
+
+//Блоки формы подбора программы
+
+@import "./blocks/form/form.scss"
