--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -48,3 +48,11 @@
   font-size: 12px;
   line-height: 16px;
 }
+
+@mixin form-common-text {
+  font-family: "Oswald", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
+  text-transform: uppercase;
+}
