Дабавляет адаптивную сетку шапки

--- a/source/sass/vareables.scss
+++ b/source/sass/vareables.scss
@@ -8,3 +8,9 @@ $sample-gray: #eaeaea;
 $dark-gray: #444444;
 
 //$gradient: linear-gradient(to top, $base-white 178px, rgba(105, 183, 56, 0.85) 178px);
+
+// Viewports
+
+$tablet-width: 768px;
+$desktop-width: 1200px;
+$mobile-width-only: 767px;
