--- a/source/sass/blocks/common/page.scss
+++ b/source/sass/blocks/common/page.scss
@@ -1,3 +1,14 @@
+.page {
+  height: 100%;
+  font-size: 18px;
+  font-family: "Oswald", sans-serif;
+  line-height: 27px;
+}
+
+
 .page__body {
   font-family: "Oswald", sans-serif;
+  min-height: 100%;
+  margin: 0;
+  color: #000000;
 }
