Добавляет сетки главной страницы и страницы формы

--- a/source/sass/blocks/common/dev.scss
+++ b/source/sass/blocks/common/dev.scss
@@ -1,4 +1,10 @@
 .dev {
   @include link-reset;
   color: $dark-gray;
+  display: flex;
+  justify-content: space-between;
+}
+
+.dev__name {
+  margin: 0;
 }
