--- a/source/sass/blocks/common/footer.scss
+++ b/source/sass/blocks/common/footer.scss
@@ -2,15 +2,39 @@
   background-color: $basic-grey;
 }
 
+.footer__address-container {
+  background-color: $base-white;
+  display: flex;
+  column-gap: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 26px;
+  padding-bottom: 26px;
+}
+
+.footer__address-container--bg {
+  background-color: $basic-grey;
+}
+
 .footer__address-title {
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
+  margin: 0;
 }
 
 .footer__address-text {
+  font-family: "Lato", sans-serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
+  color: $dark-gray;
+  margin: 0;
+}
+
+.footer__link-container {
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 40px;
 }
