--- a/source/sass/blocks/common/page.scss
+++ b/source/sass/blocks/common/page.scss
@@ -3,8 +3,8 @@
   font-size: 18px;
   font-family: "Oswald", sans-serif;
   line-height: 27px;
+  box-sizing: border-box;
 }
-
 
 .page__body {
   font-family: "Oswald", sans-serif;
