--- a/source/sass/blocks/form/form.scss
+++ b/source/sass/blocks/form/form.scss
@@ -1,5 +1,42 @@
+.form {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
 .form__title {
   @include common-title;
+  margin: 27px 0 37px 0;
+}
+
+.form__text {
+  font-family: "Oswald", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
+  margin: 0;
+  margin-bottom: 39px;
+  padding-right: 20px;
+  text-transform: uppercase;
+}
+
+.form__text-label {
+  flex-shrink: 0;
+  font-size: 16px;
+  margin-right: 15px;
+  color: $dark-gray;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.form__text-input {
+  width: 100%;
+  min-width: 80px;
+  margin: 0;
+  padding: 11px 15px;
+  border: 1px solid $very-light-gray;
+  font-family: inherit;
+  font-size: 16px;
+  text-transform: uppercase;
 }
 
 .form__module {
@@ -7,8 +44,46 @@
   color: $dark-gray;
 }
 
+.module-info {
+  border: none;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 46px;
+}
+
+.module-diet {
+  border: none;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 45px;
+}
+
+.module-contacts {
+  border: none;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 45px;
+}
+
+.module-comment {
+  border: none;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 45px;
+}
+
 .form__module-list {
   @include list-reset;
+}
+
+.form__module-item {
+  display: flex;
+  align-items: center;
+  margin: 0 0 11px;
+}
+
+.form__module-item:last-child {
+  margin-bottom: 0;
 }
 
 .form__text-input::placeholder {
@@ -24,11 +99,19 @@
 .form__comment-input {
   @include form-common-text;
   color: $dark-gray;
+  min-width: 100%;
+  min-height: 150px;
+  padding: 14px;
+  box-sizing: border-box;
 }
 
 .form__button {
   @include product-title;
   border: none;
+  width: 100%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-bottom: 21px;
 }
 
 .form__submit-note {
@@ -36,4 +119,75 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 16px;
+  margin: 0;
+  margin-bottom: 32px;
+  text-align: center;
+}
+
+.form__module-radio {
+  margin-bottom: 19px;
+}
+
+.form__module-radio:last-child {
+  margin-bottom: 0;
+}
+
+.form__radio-label {
+  padding: 6px 0 6px 15px;
+}
+
+.form__module-legend {
+  font-size: 24px;
+  line-height: 26px;
+  text-transform: none;
+}
+
+.legend-contacts {
+  margin-bottom: 35px;
+}
+
+.legend-comment {
+  margin-bottom: 38px;
+}
+
+.form__field-label {
+  flex-shrink: 0;
+  font-size: 16px;
+  margin-right: 15px;
+  color: $dark-gray;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.form__field-input {
+  width: 100%;
+  min-width: 80px;
+  margin: 0;
+  padding: 11px 15px;
+  border: 1px solid $very-light-gray;
+  font-family: inherit;
+  font-size: 16px;
+  text-transform: uppercase;
+}
+
+.legent-extra {
+  margin-bottom: 38px;
+}
+
+.module-extra {
+  border: none;
+  margin: 0;
+  padding: 0;
+}
+
+.form__module-check {
+  margin-bottom: 13px;
+}
+
+.form__module-check:last-child {
+  margin-bottom: 34px;
+}
+
+.form__checkbox-label {
+  padding: 6px 0 6px 15px;
 }
