--- a/source/sass/blocks/index/program.scss
+++ b/source/sass/blocks/index/program.scss
@@ -1,16 +1,29 @@
+.program {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
 .program__list {
   @include list-reset;
 }
 
 .program__item {
   background-color: $basic-grey;
+  min-height: 226px;
+  padding-left: 20px;
+  padding-right: 33px;
+  padding-top: 30px;
+  margin-bottom: 20px;
 }
+
 
 .program__title {
   font-weight: 400;
   font-size: 24px;
   line-height: 37px;
   text-transform: uppercase;
+  padding-left: 70px;
+  margin: 0;
 }
 
 .program__text {
