--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -12,6 +12,7 @@
 
 @mixin link-reset {
   text-decoration: none;
+  display: block;
 }
 
 //Параметры заголовков h1
@@ -52,7 +53,7 @@
 @mixin form-common-text {
   font-family: "Oswald", sans-serif;
   font-weight: 400;
-  font-size: 14px;
+  font-size: 16px;
   line-height: 18px;
   text-transform: uppercase;
 }
