--- a/source/sass/vareables.scss
+++ b/source/sass/vareables.scss
@@ -1,16 +1,17 @@
-//Цвета
-
+//Colors
 $base-green: #68b738;
 $base-white: #ffffff;
 $base-black: #000000;
 $basic-grey: #f2f2f2;
 $sample-gray: #eaeaea;
 $dark-gray: #444444;
+$special-gray: #cdcdcd;
+$very-light-gray: #e7e7e7;
+
 
 //$gradient: linear-gradient(to top, $base-white 178px, rgba(105, 183, 56, 0.85) 178px);
 
 // Viewports
-
-$tablet-width: 768px;
-$desktop-width: 1200px;
 $mobile-width-only: 767px;
+$tablet-width: 768px;
+$desktop-width: 1440px;
