--- a/source/sass/blocks/common/button.scss
+++ b/source/sass/blocks/common/button.scss
@@ -6,4 +6,8 @@
   font-weight: 400;
   line-height: 20px;
   text-transform: uppercase;
+  width: 100%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  text-align: center;
 }
