--- a/source/sass/blocks/common/page-header.scss
+++ b/source/sass/blocks/common/page-header.scss
@@ -4,15 +4,10 @@
 }
 
 @media (min-width: $tablet-width) {
-  .page-header__logo {
-    height: 50px;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-}
-
-@media (min-width: $desktop-width) {
-  .page-header__logo {
-    height: 59px;
+  .page-header {
+    display: flex;
+    justify-content: space-between;
+    padding: 25px 30px;
+    align-items: center;
   }
 }
