--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -17,11 +17,12 @@
 @import "./blocks/common/social.scss";
 @import "./blocks/common/dev.scss";
 @import "./blocks/common/btn-burger.scss";
+@import "./blocks/common/map.scss";
 @import "./blocks/index/promo.scss";
 @import "./blocks/index/program.scss";
 @import "./blocks/index/sample.scss";
 @import "./blocks/index/advantages.scss";
-@import "./blocks/common/map.scss";
+@import "./blocks/catalog/product.scss";
 @import "./blocks/catalog/catalog.scss";
 @import "./blocks/catalog/other-action.scss";
 
