--- a/source/sass/blocks/catalog/catalog.scss
+++ b/source/sass/blocks/catalog/catalog.scss
@@ -2,24 +2,6 @@
   @include list-reset;
 }
 
-.product {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  padding: 0 20px 24px;
-}
-
-.product__title {
-  margin: 0;
-}
-
-.product__image-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 50%;
-}
-
 .catalog__wrapper {
   width: 50%;
 }
@@ -32,16 +14,9 @@
   padding-left: 20px;
 }
 
-.product__link {
-  @include link-reset;
-  color: $base-black;
+@media (min-width: $tablet-width) {
+  .catalog__list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
 }
-
-.product__title {
-  @include product-title;
-}
-
-.product__info {
-  @include product-info;
-}
-
