--- a/source/sass/blocks/index/program.scss
+++ b/source/sass/blocks/index/program.scss
@@ -10,7 +10,8 @@
 .program__item {
   background-color: $basic-grey;
   min-height: 226px;
-  padding: 30px 33px 20px 20px;
+  padding: 30px 33px 18px 20px;
+  margin-bottom: 20px;
 }
 
 
