--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -33,6 +33,13 @@
   line-height: 18px;
 }
 
+@mixin common-text-tablet {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+}
+
 //Параметры заголовков в карточке товаров
 
 @mixin product-title {
