--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -64,3 +64,10 @@
   line-height: 18px;
   text-transform: uppercase;
 }
+
+@mixin common-title-tablet {
+  font-family: "Oswald", sans-serif;
+  font-weight: 400;
+  font-size: 60px;
+  line-height: 60px;
+}
