--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -25,6 +25,7 @@
 @import "./blocks/catalog/product.scss";
 @import "./blocks/catalog/catalog.scss";
 @import "./blocks/catalog/other-action.scss";
+@import "./blocks/common/field-submit";
 
 //Блоки формы подбора программы
 @import "./blocks/form/form.scss"
