--- a/source/sass/blocks/catalog/catalog.scss
+++ b/source/sass/blocks/catalog/catalog.scss
@@ -14,9 +14,50 @@
   padding-left: 20px;
 }
 
+.catalog__product-description {
+  @include product-title;
+}
+
+.catalog__product-text {
+  @include product-info;
+}
+
+.catalog__product-button {
+  background-color: $basic-grey;
+  color: $dark-gray;
+}
+
+.catalog__title--other {
+  font-family: "Oswald", sans-serif;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 24px;
+}
+
 @media (min-width: $tablet-width) {
   .catalog__list {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    gap: 60px;
+    padding: 0 30px 30px 30px;
+    margin-bottom: 40px;
+  }
+
+  .catalog__title {
+    @include common-title-big;
+    text-align: left;
+    margin: 0;
+    margin-bottom: 84px;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  .catalog__title--other {
+    @include common-title;
+    margin-bottom: 80px;
+  }
+
+  .catalog__list--other {
+    grid-template-columns: 1fr;
   }
 }
