--- a/source/sass/blocks/catalog/other-action.scss
+++ b/source/sass/blocks/catalog/other-action.scss
@@ -18,22 +18,12 @@
   padding-top: 187px;
 }
 
-.catalog__product-description {
-  @include product-title;
-}
+@media (min-width: $tablet-width) {
+  .other-action {
+    height: 200px;
+  }
 
-.catalog__product-text {
-  @include product-info;
-}
-
-.catalog__product-button {
-  background-color: $basic-grey;
-  color: $dark-gray;
-}
-
-.catalog__title--other {
-  font-family: "Oswald", sans-serif;
-  font-weight: 400;
-  font-size: 24px;
-  line-height: 24px;
+  .other-action__text {
+    padding: 0;
+  }
 }
