--- a/source/sass/blocks/catalog/product.scss
+++ b/source/sass/blocks/catalog/product.scss
@@ -30,13 +30,11 @@
   .product {
     display: flex;
     flex-direction: column;
-    width: 324px;
-    height: 510px;
+    padding: 0;
   }
 
   .product__info {
     display: grid;
     grid-template-columns: 1fr 1fr;
-
   }
 }
