--- a/source/sass/blocks/common/page-header.scss
+++ b/source/sass/blocks/common/page-header.scss
@@ -11,3 +11,12 @@
     align-items: center;
   }
 }
+
+@media (min-width: $desktop-width) {
+  .page-header {
+    position: relative;
+    z-index: 1;
+    background-color: transparent;
+    padding: 55px 110px;
+  }
+}
