--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -26,6 +26,7 @@
 @import "./blocks/catalog/catalog.scss";
 @import "./blocks/catalog/other-action.scss";
 @import "./blocks/common/field-submit";
+@import "./blocks/index/slider.scss";
 
 //Блоки формы подбора программы
 @import "./blocks/form/form.scss"
