Крупные блоки каталога для десктоп версии

--- a/source/sass/blocks/common/footer.scss
+++ b/source/sass/blocks/common/footer.scss
@@ -76,6 +76,10 @@
     left: 110px;
   }
 
+  .footer__address-container--bg {
+    background-color: $base-white;
+  }
+
   .footer {
     position: relative;
     background-color: $basic-grey;
