--- a/source/sass/blocks/catalog/catalog.scss
+++ b/source/sass/blocks/catalog/catalog.scss
@@ -78,3 +78,53 @@
     margin-bottom: 84px;
   }
 }
+
+@media (min-width: $desktop-width) {
+  .catalog__list {
+    display: grid;
+    gap: 60px;
+    padding: 0 30px 30px 30px;
+    grid-template-columns: repeat(3, 1fr);
+    padding-left: 110px;
+    padding-right: 110px;
+    column-gap: 80px;
+    margin-bottom: 76px;
+  }
+
+  .catalog__title--other {
+    @include common-title;
+    padding-left: 110px;
+    grid-area: title-other;
+  }
+
+  .catalog--other {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
+    grid-template-areas: "title-other title-other""catalog-list other-action";
+    padding-top: 0;
+    padding-left: 110px;
+    padding-right: 110px;
+    margin-bottom: 87px;
+  }
+
+  .catalog__list--other {
+    grid-area: catalog-list;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+  }
+
+  .catalog__item--other {
+    padding: 0;
+    justify-content: space-between;
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+
+  .other-action {
+    grid-area: other-action;
+  }
+}
