--- a/source/sass/blocks/catalog/product.scss
+++ b/source/sass/blocks/catalog/product.scss
@@ -39,4 +39,10 @@
     grid-template-columns: 1fr 1fr;
     flex-direction: column;
   }
+
+  .product__button--other {
+    width: 244px;
+    padding: 0;
+    padding-top: 10px;
+  }
 }
