--- a/source/sass/blocks/common/page-header.scss
+++ b/source/sass/blocks/common/page-header.scss
@@ -1,6 +1,6 @@
 .page-header {
   background-color: $base-white;
-  padding: 13px 21px 14px 20px;
+  position: relative;
 }
 
 @media (min-width: $tablet-width) {
