--- a/source/sass/blocks/common/btn-burger.scss
+++ b/source/sass/blocks/common/btn-burger.scss
@@ -2,8 +2,46 @@
   width: 24px;
   height: 24px;
   position: absolute;
-  top: -34px;
-  right: 0;
+  top: 22px;
+  right: 19px;
+  z-index: 2;
+  background-color: transparent;
+  border: none;
+}
+
+.main-nav--is-close .btn-burger::before {
+  content: "";
+  position: absolute;
+  display: block;
+  top: 2px;
+  left: -1px;
+  width: 24px;
+  height: 2px;
+  background-color: #000000;
+  box-shadow: 0 8px 0 0 #000000, 0 16px 0 0 #000000;
+}
+
+.main-nav--is-open .btn-burger {
+  position: absolute;
+  top: -44px;
+  right: 19px;
+
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    top: 10px;
+    right: -1px;
+    width: 24px;
+    height: 2px;
+    background-color: #000000;
+    transform: rotate(45deg);
+    box-shadow: none;
+  }
+
+  &::after {
+    transform: rotate(-45deg);
+  }
 }
 
 @media (min-width: $tablet-width) {
