--- a/source/sass/blocks/common/logo.scss
+++ b/source/sass/blocks/common/logo.scss
@@ -1,13 +1,16 @@
 .logo {
   text-decoration: none;
-  height: 38px;
+  padding: 14px 20px;
   display: flex;
+  min-height: 38px;
   justify-content: center;
+  box-sizing: content-box;
 }
 
 .logo__image {
   position: absolute;
   left: 20px;
+  top: 15px;
 }
 
 .logo__image-title {
@@ -15,7 +18,9 @@
 }
 
 .footer__logo {
-  margin-bottom: 40px;
+  padding-top: 40px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid $light-special-gray;
 }
 
 @media (min-width: $tablet-width) {
@@ -30,7 +35,9 @@
   }
 
   .footer__logo {
+    padding: 0;
     margin-bottom: 0;
+    border: none;
   }
 }
 
