--- a/source/sass/blocks/common/main-nav.scss
+++ b/source/sass/blocks/common/main-nav.scss
@@ -1,8 +1,15 @@
 .main-nav {
-  display: flex;
-  justify-content: center;
-  position: relative;
   background-color: $base-white;
+}
+
+.main-nav--is-open {
+  position: absolute;
+  z-index: 1;
+  min-width: 100%;
+}
+
+.main-nav--is-close .main-nav__list {
+  display: none;
 }
 
 .main-nav__list {
@@ -13,6 +20,10 @@
   text-align: center;
 }
 
+.main-nav__item {
+  border-top: 1px solid $light-gray;
+}
+
 .main-nav__link {
   @include link-reset;
   color: $base-black;
@@ -21,25 +32,71 @@
   padding-bottom: 24px;
 }
 
+.main-nav__link:hover {
+  opacity: 0.6;
+}
+
+.main-nav__link:active {
+  opacity: 0.3;
+}
+
+// Стили для планшетной версии сайта.
+
 @media (min-width: $tablet-width) {
   .main-nav {
     justify-content: flex-end;
+    position: relative;
   }
 
   .main-nav__list {
     display: flex;
+    flex-wrap: wrap;
     justify-content: flex-end;
     column-gap: 33px;
-    width: 436px;
     font-size: 18px;
     line-height: 24px;
   }
+
+  .main-nav--is-close .main-nav__list {
+    display: flex;
+  }
+
+  .main-nav__item {
+    border: none;
+  }
+
+  .main-nav__list--active::after {
+    content: "";
+    position: relative;
+    display: block;
+    bottom: -4px;
+    width: 100%;
+    height: 2px;
+    border-bottom: 2px solid $base-green;
+  }
+
+  .main-nav__link--active::after {
+    content: "";
+    position: relative;
+    display: block;
+    bottom: -4px;
+    width: 100%;
+    height: 2px;
+    border-bottom: 2px solid $base-green;
+  }
 }
+
+// Стили для десктопной версии сайта.
 
 @media (min-width: $desktop-width) {
   .main-nav__list {
     position: relative;
     z-index: 1;
+  }
+
+  .main-nav__link {
+    font-size: 20px;
+    line-height: 30px;
   }
 
   .main-nav__list--index a {
@@ -48,5 +105,15 @@
 
   .main-nav {
     background-color: transparent;
+  }
+
+  .main-nav__list--index .main-nav__link--active::after {
+    content: "";
+    position: relative;
+    display: block;
+    bottom: -4px;
+    width: 100%;
+    height: 2px;
+    border-bottom: 2px solid $base-white;
   }
 }
