--- a/source/sass/blocks/common/page.scss
+++ b/source/sass/blocks/common/page.scss
@@ -1,5 +1,5 @@
 .page {
-  height: 100%;
+  height: 100vh;
   font-size: 18px;
   font-family: "Oswald", sans-serif;
   line-height: 27px;
@@ -8,7 +8,14 @@
 
 .page__body {
   font-family: "Oswald", sans-serif;
-  min-height: 100%;
+  min-height: 100vh;
+  min-width: 320px;
   margin: 0;
   color: #000000;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
