--- a/source/sass/blocks/common/social.scss
+++ b/source/sass/blocks/common/social.scss
@@ -2,12 +2,11 @@
   @include list-reset;
   padding: 20px;
   margin-bottom: 20px;
-  outline: 2px solid #00ff15;
-  outline-offset: -2px;
   display: grid;
   grid-template-columns: repeat(3, 28px);
   justify-content: center;
   gap: 24px;
+  border-bottom: 1px solid $light-special-gray;
 }
 
 .social__link {
@@ -25,5 +24,6 @@
 @media (min-width: $tablet-width) {
   .social__list {
     margin-bottom: 0;
+    border: none;
   }
 }
