--- a/source/sass/blocks/index/promo.scss
+++ b/source/sass/blocks/index/promo.scss
@@ -1,6 +1,6 @@
 .promo {
   background-size: 100%;
-  background-image: url("../../../img/index-background-desktop.png");
+  background-image: linear-gradient(to top, #ffffff 200px, hwb(97 22% 28% / 0.85) 200px), url("../../../img/index-background-mobile.png");
   background-repeat: no-repeat;
   padding-left: 20px;
   padding-right: 20px;
@@ -27,6 +27,14 @@
 
 .promo__button {
   margin-bottom: 20px;
+}
+
+.promo__button:hover {
+  background-color: $dark-green;
+}
+
+.promo__button:active {
+  color: rgb(255, 255, 255, 0.3);
 }
 
 @media (min-width: $tablet-width) {
@@ -68,35 +76,42 @@
 
 @media (min-width: $desktop-width) {
   .promo {
-    bottom: 187px;
-    background-size: 50%;
-    background-position: right;
-    background-image: url("../../../img/index-background-desktop.png");
+    padding-left: 190px;
+    margin-bottom: 121px;
+  }
+
+  .promo::before {
+    content: "";
+    width: 50%;
+    height: 694px;
+    position: absolute;
+    z-index: -1;
+    top: -197px;
+    right: 0;
+    background-image: linear-gradient(to top, $base-white 0, rgba(105, 183, 56, 0.85) 0), url("../../../img/index-background-desktop.png");
     background-repeat: no-repeat;
-    padding: 0;
-    min-height: 694px;
+    background-size: 100%;
   }
 
   .promo__title {
-    position: absolute;
     text-align: left;
     padding: 0;
+    //padding-left: 190px;
     margin: 0;
-    top: 224px;
-    left: 190px;
+    margin-bottom: 40px;
   }
 
   .promo__slogan {
-    position: absolute;
     margin: 0;
     padding: 0;
-    top: 380px;
-    left: 190px;
+    //padding-left: 190px;
   }
 
   .promo__button {
     width: 244px;
+    padding-top: 17px;
+    padding-bottom: 17px;
+    top: 220px;
     left: 190px;
-    top: 451px;
   }
 }
