--- a/source/sass/blocks/index/program.scss
+++ b/source/sass/blocks/index/program.scss
@@ -101,8 +101,7 @@
 
 @media (min-width: $desktop-width) {
   .program {
-    padding-left: 110px;
-    padding-right: 110px;
+    padding: 0 110px;
     margin-bottom: 71px;
   }
 
