--- a/source/sass/blocks/index/promo.scss
+++ b/source/sass/blocks/index/promo.scss
@@ -76,7 +76,7 @@
 
 @media (min-width: $desktop-width) {
   .promo {
-    padding-left: 190px;
+    padding: 0 190px;
     margin-bottom: 121px;
   }
 
