--- a/source/sass/blocks/index/advantages.scss
+++ b/source/sass/blocks/index/advantages.scss
@@ -84,9 +84,8 @@
 
 @media (min-width: $desktop-width) {
   .advantages {
-    padding-left: 110px;
-    padding-right: 110px;
-    margin-bottom: 0;
+    padding: 0 110px;
+    margin-bottom: 69px;
   }
 
   .advantages__title {
