--- a/source/sass/blocks/catalog/catalog.scss
+++ b/source/sass/blocks/catalog/catalog.scss
@@ -1,3 +1,7 @@
+.catalog {
+  border-top: 1px solid $light-special-gray;
+}
+
 .catalog__list {
   @include list-reset;
   margin-bottom: 25px;
@@ -101,7 +105,7 @@
     display: grid;
     grid-template-columns: auto auto;
     grid-template-rows: auto auto;
-    grid-template-areas: "title-other title-other""catalog-list other-action";
+    grid-template-areas: "title-other title-other" "catalog-list other-action";
     padding-top: 0;
     padding-left: 110px;
     padding-right: 110px;
