--- a/source/sass/blocks/common/main-nav.scss
+++ b/source/sass/blocks/common/main-nav.scss
@@ -14,6 +14,10 @@
   border-top: 1px solid $light-gray;
 }
 
+.main-nav__item:last-child {
+  border-bottom: 1px solid $light-gray;
+}
+
 .main-nav__link {
   @include link-reset;
   color: $base-black;
