--- a/source/sass/blocks/index/program.scss
+++ b/source/sass/blocks/index/program.scss
@@ -25,6 +25,13 @@
   top: 24px;
 }
 
+.program__item::after {
+  content: "";
+  width: 50px;
+  height: 50px;
+  position: absolute;
+}
+
 .program__title {
   font-weight: 400;
   font-size: 24px;
